--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,6 +37,7 @@ jobs:
           
           
   deploy-dev:
+    needs: build
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
