--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,6 +38,9 @@ jobs:
           
   deploy-dev:
     needs: build
+    environment:
+      name: desenvolvimento
+    
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
